test/corpus/grammar.txt
=================
simple rule
=================

^s: a .

---

(source_file
  (rule
    (mark)
    (name)
    (alts
      (alt
        (term
          (factor
            (nonterminal
              (name))))))))

=================
simple rule with comments
=================

^s: { comment } a  {also a comment } .

---

(source_file
  (rule
    (mark)
    (name)
    (comment)
    (alts
      (alt
        (term
          (factor
            (nonterminal
              (name))))))
    (comment)))

=================
rule without a mark
=================

s: a .

---

(source_file
  (rule
    (name)
    (alts
      (alt
        (term
          (factor
            (nonterminal
              (name))))))))

=================
grammar with a prolog
=================

ixml version "1.0" .
s: a .

---

(source_file
  (prolog
    (version
      (string
        (char)
        (char)
        (char))))
  (rule
    (name)
    (alts
      (alt
        (term
          (factor
            (nonterminal
              (name))))))))

=================
two rules
=================

s: a .
a: b .

---

(source_file
  (rule
    (name)
    (alts
      (alt
        (term
          (factor
            (nonterminal
              (name)))))))
  (rule
    (name)
    (alts
      (alt
        (term
          (factor
            (nonterminal
              (name))))))))

=================
a rule with a string literal
=================

s: "a".

---

(source_file
  (rule
    (name)
    (alts
      (alt
        (term
          (factor
            (terminal
              (literal
                (quoted
                  (string
                    (char)))))))))))


=================
rules with escaped string literal
=================

s: "a""b".
t: 'c''d'.

---

(source_file
  (rule
    (name)
    (alts
      (alt
        (term
          (factor
            (terminal
              (literal
                (quoted
                  (string
                    (char)
                    (escaped_dquote)
                    (char))))))))))
  (rule
    (name)
    (alts
      (alt
        (term
          (factor
            (terminal
              (literal
                (quoted
                  (string
                    (char)
                    (escaped_squote)
                    (char)))))))))))

=================
a rule named “ixml”
=================

ixml: S, rules.

---

(source_file
  (rule
    (name)
    (alts
      (alt
        (term
          (factor
            (nonterminal
              (name))))
        (term
          (factor
            (nonterminal
              (name))))))))

=================
a member that’s a character
=================

-S: -["."] .

---

(source_file
  (rule
    (mark)
    (name)
    (alts
      (alt
        (term
          (factor
            (terminal
              (charset
                (inclusion
                  (tmark)
                  (set
                    (member
                      (character
                        (char)))))))))))))


=================
a member that’s a string
=================

-S: -["ab"] .

---

(source_file
  (rule
    (mark)
    (name)
    (alts
      (alt
        (term
          (factor
            (terminal
              (charset
                (inclusion
                  (tmark)
                  (set
                    (member
                      (string
                        (char)
                        (char)))))))))))))


=================
a member that’s a string range
=================

-S: -["a" - "b"] .

---

(source_file
  (rule
    (mark)
    (name)
    (alts
      (alt
        (term
          (factor
            (terminal
              (charset
                (inclusion
                  (tmark)
                  (set
                    (member
                      (range
                        (from
                          (character
                            (char)))
                        (to
                          (character
                            (char)))))))))))))))

=================
empty comment
=================

S: {} a .

---

(source_file
  (rule
    (name)
    (comment)
      (alts
        (alt
          (term
            (factor
              (nonterminal
                (name))))))))

=================
comment with spaces
=================

S: {  } a .

---

(source_file
  (rule
    (name)
    (comment)
      (alts
        (alt
          (term
            (factor
              (nonterminal
                (name))))))))

=================
non-empty comment
=================

S: { abc } a .

---

(source_file
  (rule
    (name)
    (comment)
      (alts
        (alt
          (term
            (factor
              (nonterminal
                (name))))))))

=================
nested comment
=================

S: { {abc} } a .

---

(source_file
  (rule
    (name)
    (comment
      (comment))
      (alts
        (alt
          (term
            (factor
              (nonterminal
                (name))))))))

=================
nested comment at start
=================

S: {{abc} } a .

---

(source_file
  (rule
    (name)
    (comment
      (comment))
      (alts
        (alt
          (term
            (factor
              (nonterminal
                (name))))))))

=================
nested comment at end
=================

S: { {abc}} a .

---

(source_file
  (rule
    (name)
    (comment
      (comment))
      (alts
        (alt
          (term
            (factor
              (nonterminal
                (name))))))))

=================
deeply nested comment
=================

S: {{a{b{c}}}} a .

---

(source_file
  (rule
    (name)
    (comment
      (comment
        (comment
          (comment))))
      (alts
        (alt
          (term
            (factor
              (nonterminal
                (name))))))))

=================
curly brace in a string
=================

S: "{" .

---

(source_file
  (rule
    (name)
      (alts
        (alt
          (term
            (factor
              (terminal
                (literal
                  (quoted
                    (string
                      (char)))))))))))
